--- a/docs/cloud/features/data-governance/manage-metadata.mdx
+++ b/docs/cloud/features/data-governance/manage-metadata.mdx
@@ -4,7 +4,7 @@ title: "Manage metadata"
 
 Manage your metadata directly from the [Elementary Catalog](/cloud/features/collaboration-and-communication/catalog), with no need to update code manually. This streamlines governance workflows, reduces manual effort, and improves visibility and consistency across your assets.
 
-From a single interface, you can view and filter assets, edit metadata fields individually or in bulk, edit metadta for related assets and even use [AI to generate high-quality descriptions](/cloud/features/data-governance/ai-descriptions)—saving time and enhancing data discoverability. All changes are version-controlled via pull requests to keep your dbt project in sync.
+From a single interface, you can view and filter assets, edit metadata fields individually or in bulk, edit metadata for related assets and even use [AI to generate high-quality descriptions](/cloud/features/data-governance/ai-descriptions)—saving time and enhancing data discoverability. All changes are version-controlled via pull requests to keep your dbt project in sync.
 
 To get the most out of this feature, check out our [Data Governance Best Practices](/cloud/best-practices/governance-for-observability) guide.
 
