added image comments

--- a/docs/cloud/integrations/alerts/linear.mdx
+++ b/docs/cloud/integrations/alerts/linear.mdx
@@ -14,7 +14,7 @@ Elementary's Linear integration enables creating Linear tickets from incidents.
 5. Click `Save` to finish the setup
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/connect_zqg0vr.png" />
-<img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794589/choose_integration_qshyci.png" />
+// choose_ticketing_tool.png
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/linear_oauth_kkylxo.png" />
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794589/choose_linear_team_wcnmh4.png" />
 
