--- a/docs/cloud/integrations/alerts/servicenow.mdx
+++ b/docs/cloud/integrations/alerts/servicenow.mdx
@@ -4,7 +4,14 @@ title: "ServiceNow"
 
 Elementary's ServiceNow integration enables creating ServiceNow incidents from incidents.
 
-// servicenow_create_ticket.png
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_create_ticket_ztpeaw.png"
+      width="500"
+    />
+  </div>
+</Frame>
 
 ## Create a ServiceNow app (Admin required)
 1. Connect to your ServiceNow instance
@@ -26,13 +33,59 @@ Elementary's ServiceNow integration enables creating ServiceNow incidents from i
         - Column Name: `u_elementary_incident_url`
     - Click `Submit`
 
-// servicenow_app_registry.png
-// servicenow_oauth_application.png
-// servicenow_oauth_app.png
-// servicenow_tables.png
-// servicenow_incident_table.png
-// servicenow_elementary_link.png
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_app_registry_q7ptec.png"
+      width="500"
+    />
+  </div>
+</Frame>
 
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_oauth_application_k69gma.png"
+      width="500"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_oauth_app_ur3box.png"
+      width="500"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788474/servicenow_tables_g0gajc.png"
+      width="500"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788474/servicenow_incident_table_u2gvvj.png"
+      width="500"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_elementary_link_x0q0dw.png"
+      width="500"
+    />
+  </div>
+</Frame>
 
 ## How to connect your ServiceNow app
 1. Go to the `Environments` page on the sidebar.
@@ -47,10 +100,40 @@ Elementary's ServiceNow integration enables creating ServiceNow incidents from i
 7. Click `Save`
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/connect_zqg0vr.png" />
-// choose_ticketing_tool.png
-// servicenow_app_connect.png
-// servicenow_oauth.png
-// servicenow_select_group.png
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788474/choose_ticketing_tool_dv73ab.png"
+      width="500"
+    />
+  </div>
+</Frame>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_app_connect_tcldo8.png"
+      width="500"
+    />
+  </div>
+</Frame>
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788474/servicenow_oauth_rdecta.png"
+      width="500"
+    />
+  </div>
+</Frame>
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788473/servicenow_select_group_klgzmk.png"
+      width="500"
+    />
+  </div>
+</Frame>
 
 
 ## Creating ServiceNow incident from incidents
@@ -62,4 +145,11 @@ The incident will also contain a link to the incident in Elementary.
 
 <Note>Note: Elementary will not update the incident in ServiceNow when the incident is resolved or changed in any way</Note>
 
-// servicenow_ticket.png
+<Frame>
+  <div className="dark:bg-white rounded-md p-1">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1751788475/servicenow_ticket_rxcfrb.png"
+      width="500"
+    />
+  </div>
+</Frame>
