--- a/docs/home/homepage.mdx
+++ b/docs/home/homepage.mdx
@@ -87,14 +87,14 @@ icon: "house"
           </FeatureHeader>
           <div className="home__features-grid">
             <FeatureCard
-              heading="Detect anomalies in your dbt models"
+              heading="Detect anomalies"
               description="Detect anomalies in your dbt models with tests for freshness, volume, and your customizable data metrics."
               icon="monitor-waveform"
               showCloudFeature={false}
               link="/cloud/features/anomaly-detection/monitors-overview"
             />
             <FeatureCard
-              heading="ML-powered data quality monitoring"
+              heading="ML-powered pipeline monitoring"
               description="ML-powered monitors automatically detect data quality issues. Out-of-the-box for volume and freshness, and opt-in for data quality metrics."
               icon="sparkles"
               showCloudFeature={true}
@@ -121,6 +121,20 @@ icon: "house"
               showCloudFeature={true}
               link="/cloud/features/data-tests/data-tests-overview#test-configuration"
             />
+              <FeatureCard
+              heading="Manage test coverage"
+              description="See the full picture of your test coverage across assets and dimensions. Easily identify gaps and prioritize coverage for critical assets."
+              icon="flask-vial"
+              showCloudFeature={true}
+              link="/cloud/features/data-tests/test-coverage-screen"
+            />
+            <FeatureCard
+              heading="Test recommendation AI agent"
+              description="Analyzes your data asset, metadata, lineage, and existing test suite to suggest high-impact tests that match your team’s style and priorities."
+              icon="wand-magic-sparkles"
+              showCloudFeature={true}
+              link="/cloud/ai-agents/test-recommendation-agent"
+            />
           </div>
         </div>
       </div>
@@ -133,37 +147,37 @@ icon: "house"
           </FeatureHeader>
           <div className="home__features-grid">
             <FeatureCard
-              heading="Column-level lineage and impact analysis"
-              description="Column-level lineage that spans through sources, models and all tools, enriched with monitoring results. Enables granular root cause and impact analysis."
-              icon="git-merge"
+              heading="Send alerts, analyze lineage"
+              description="Send alerts for data quality issues and understand their impact."
+              icon="rotate-exclamation"
               showCloudFeature={false}
+              link="/cloud/features/data-lineage/lineage"
+            />
+            <FeatureCard
+              heading="Column-level lineage and impact analysis"
+              description="Column-level lineage from source to BI. Enables granular root cause and impact analysis."
+              icon="arrow-progress"
+              showCloudFeature={true}
               link="/cloud/features/data-lineage/lineage"
             />
             <FeatureCard
               heading="Highly configurable alerts and integrations"
               description="Distribute highly configurable alerts to different channels and integrations. Automatically tag owners, and enable setting status and assignees at the alert level."
               icon="bell-exclamation"
-              showCloudFeature={false}
+              showCloudFeature={true}
               link="/cloud/features/alerts-and-incidents/alerts-and-incidents-overview"
             />
             <FeatureCard
-              heading="Incident grouping and fatigue reduction"
-              description="Different failures related to the same issue are grouped automatically to a single incident. This accelerates triage and response, and reduces alert fatigue."
-              icon="layers"
-              showCloudFeature={false}
-              link="/cloud/features/alerts-and-incidents/incidents"
-            />
-            <FeatureCard
-              heading="Unified incident management interface"
-              description="Manage all open incidents in a single interface, with a clear view of status and assignees. Track historical incidents and high-level incident metrics."
+              heading="Incident management system"
+              description="Manage all open quality incidents in a single interface, with a clear view of status and assignees."
               icon="list-check"
-              showCloudFeature={false}
+              showCloudFeature={true}
               link="/cloud/features/alerts-and-incidents/incident-management"
             />
             <FeatureCard
-              heading="AI-powered incident triage and PR generation"
-              description="Automate incident triage with AI-powered root cause analysis, impact assessment, and pull request generation."
-              icon="sparkles"
+              heading="Triage & resolution AI agent"
+              description="Automates root cause analysis, clarifies the impact, and suggests actionable fixes."
+              icon="wand-magic-sparkles"
               showCloudFeature={true}
               link="/cloud/ai-agents/triage-resolution-agent"
             />
@@ -183,7 +197,7 @@ icon: "house"
               label="Recommended"
               labelColor="pink"
               title="What is Elementary?"
-              description="Elementary is the dev-first data observability platform built for dbt."
+              description="Elementary is the dev-first data reliability platform, built for the entire organization."
               link="/cloud/what-is-elementary"
             />
             <div class="flex flex-col gap-4">
@@ -224,21 +238,21 @@ icon: "house"
             />
             <FeatureCard
               heading="Data catalog"
-              description="Curate a collaborative, AI-enriched catalog with bulk metadata editing, critical asset tagging, and analyst-first discovery tools."
+              description="Curate a collaborative, AI-enriched catalog with smart metadata editing, critical asset tagging, and analyst-first discovery tools."
               icon="book-open"
               showCloudFeature={true}
               link="/cloud/features/collaboration-and-communication/catalog"
             />
             <FeatureCard
-              heading="Data health score"
+              heading="Data health scores"
               description="See the Data Health scores of all your datasets by domain and share with stakeholders."
               icon="heart-pulse"
-              showCloudFeature={false}
-              comingSoon={true}
+              showCloudFeature={true}
+              comingSoon={false}
             />
             <FeatureCard
-              heading="AI Catalog agent"
-              description="See the Data Health scores of all your datasets by domain and share with stakeholders."
+              heading="Catalog AI agent"
+              description="Helps data analysts, business users, and AI tools find the right data on their own so engineers don’t have to be the bottleneck."
               icon="robot"
               showCloudFeature={false}
               link="/cloud/ai-agents/catalog-agent"
