new homepage adjustments

--- a/docs/home/homepage.mdx
+++ b/docs/home/homepage.mdx
@@ -278,7 +278,7 @@ icon: "house"
               link="/cloud/features/data-governance/critical_assets"
             />
             <FeatureCard
-              heading="Efficiently add tags, owners and subscribers'"
+              heading="Efficiently add tags, owners and subscribers"
               description="Visualize and edit your assets' tags, owners and subscibers to ensure structure and the right work distribution"
               icon="tags"
               showCloudFeature={true}
@@ -365,8 +365,7 @@ icon: "house"
             <div class="home__guides-header">
               <h2 class="home__heading-lg">Get started now</h2>
               <p class="home__paragraph-lg">
-                Choose the product that fits your needs. It's a matter of scale, collaboration, and
-                technical overhead.
+                Whether you need a lightweight start or an enterprise-ready platform, Elementary has a solution for you.
               </p>
             </div>
             <div class="home__3col">
