change homepage texts

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -293,7 +293,7 @@ icon: "house"
               link="/cloud/features/data-governance/manage-metadata"
             />
             <FeatureCard
-              heading="AI Descriptions"
+              heading="AI descriptions"
               description="Let the AI agent generate high-quality asset descriptions that align with your existing documentation and company policies."
               icon="sparkles"
               showCloudFeature={true}
@@ -339,7 +339,7 @@ icon: "house"
                   />
                 ))}
             </div>
-            <h3 class="home__integrations-heading">Cloud-only integrations</h3>
+            <h3 class="home__integrations-heading">Cloud integrations</h3>
             <div class="home__integrations-grid">
               {integrations
                 .filter((integration) => integration.cloud === true)
@@ -422,7 +422,7 @@ icon: "house"
         <div class="home__cta">
           <h2 class="home__heading-lg">Join the community</h2>
           <p class="home__paragraph-lg">
-            Join the Elementary Community to get support, explore best practices, and stay up to
+            Join the Elementary Community for AI and team support, explore best practices, and stay up to
             date on OSS and Cloud. Connect with other data professionals and help shape what's next.
           </p> <a
             href="https://elementary-data.com/community"
