change homepage texts

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -251,10 +251,17 @@ icon: "house"
               comingSoon={false}
             />
             <FeatureCard
+              heading="Configure tests in the UI"
+              description="Allow business users to configure tests in the UI, without needing to write YAML or SQL."
+              icon="pencil"
+              showCloudFeature={true}
+              link="/cloud/features/data-tests/data-tests-overview#test-configuration"
+            />
+            <FeatureCard
               heading="Catalog AI agent"
               description="Helps data analysts, business users, and AI tools find the right data on their own so engineers don’t have to be the bottleneck."
               icon="robot"
-              showCloudFeature={false}
+              showCloudFeature={true}
               link="/cloud/ai-agents/catalog-agent"
             />
           </div>
@@ -274,7 +281,7 @@ icon: "house"
               heading="Marking critical assets"
               description="Easily mark your company's crucial assets as critical, and give higher priority in monitoring and alerting to any issue that might impact them."
               icon="star"
-              showCloudFeature={false}
+              showCloudFeature={true}
               link="/cloud/features/data-governance/critical_assets"
             />
             <FeatureCard
