change homepage texts

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -277,6 +277,13 @@ icon: "house"
             Easily apply <span>governance</span>
           </FeatureHeader>
           <div className="home__features-grid">
+              <FeatureCard
+              heading="Display tags, owners and subscribers"
+              description="Visualize and edit your assets' tags, owners and subscribers, as they are in your code"
+              icon="hashtag"
+              showCloudFeature={false}
+              link="/cloud/features/data-governance/critical_assets"
+            />
             <FeatureCard
               heading="Marking critical assets"
               description="Easily mark your company's crucial assets as critical, and give higher priority in monitoring and alerting to any issue that might impact them."
@@ -286,7 +293,7 @@ icon: "house"
             />
             <FeatureCard
               heading="Efficiently add tags, owners and subscribers"
-              description="Visualize and edit your assets' tags, owners and subscibers to ensure structure and the right work distribution"
+              description="Edit your assets' tags, owners and subscibers in a bulk to ensure structure and the right work distribution"
               icon="tags"
               showCloudFeature={true}
               comingSoon={false}
