--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -48,12 +48,12 @@ Elementary Cloud builds on the dbt package by adding a fully managed, AI-powered
 
 Use it to:
 
+-Integrate with your entire stack - from DWH to BI, AI tools and ticketing systems
 - Give engineers, analysts, and stakeholders shared visibility into data health
-- Automate test recommendations, metadata coverage, and root cause analysis with AI agents
-- Group and route alerts based on criticality, ownership, and impact
-- Integrate with your entire stack - from DWH to BI, AI tools and ticketing systems.
-- Track progress over time, enforce governance, and support AI readiness
 - Scale reliability efforts across large teams and complex environments
+- Reduce alert fatigue - group and route alerts based on criticality, ownership, and impact
+- Automate test recommendations, metadata coverage, and root cause analysis with AI agents
+- Track progress over time, enforce governance, and support AI readiness
 
 Learn more about Elementary Cloud’s features and integrations [here](https://docs.elementary-data.com/cloud/introduction), and get started with a 30-day free trial [here](https://docs.elementary-data.com/quickstart).
 
