--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -30,14 +30,14 @@ Elementary prioritizes configuration in the following order:
 <pre>
   <code>
   meta:
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#owner"><font color="#CD7D55">owner: "@jessica.jones"</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#subscribers"><font color="#CD7D55">subscribers: ["@jessica.jones", "@joe.joseph"]</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#test-description"><font color="#CD7D55">description: "This is the test description"</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#tags"><font color="#CD7D55">tags: ["#marketing", "#data_ops"]</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#custom-channel"><font color="#CD7D55">channel: data_ops</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#suppression-interval"><font color="#CD7D55">alert_suppression_interval: 24</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#group-alerts-by-table"><font color="#CD7D55">slack_group_alerts_by: table</font></a>
-  &nbsp;&nbsp;<a href="./alerts-code-configuration#alert-fields"><font color="#CD7D55">alert_fields: ["description", "owners", "tags", "subscribers", ...]</font></a>
+  &nbsp;&nbsp;<a href="#owner"><font color="#CD7D55">owner: "@jessica.jones"</font></a>
+  &nbsp;&nbsp;<a href="#subscribers"><font color="#CD7D55">subscribers: ["@jessica.jones", "@joe.joseph"]</font></a>
+  &nbsp;&nbsp;<a href="#test-description"><font color="#CD7D55">description: "This is the test description"</font></a>
+  &nbsp;&nbsp;<a href="#tags"><font color="#CD7D55">tags: ["#marketing", "#data_ops"]</font></a>
+  &nbsp;&nbsp;<a href="#custom-channel"><font color="#CD7D55">channel: data_ops</font></a>
+  &nbsp;&nbsp;<a href="#suppression-interval"><font color="#CD7D55">alert_suppression_interval: 24</font></a>
+  &nbsp;&nbsp;<a href="#group-alerts-by-table"><font color="#CD7D55">slack_group_alerts_by: table</font></a>
+  &nbsp;&nbsp;<a href="#alert-fields"><font color="#CD7D55">alert_fields: ["description", "owners", "tags", "subscribers", ...]</font></a>
   </code>
 </pre>
 
