add culture page

--- a/docs/culture.mdx
+++ b/docs/culture.mdx
@@ -61,7 +61,7 @@ There is always more work to do, so don’t wait for a good time to take a vacat
 
 It is essential to our success that Elementary will be a work place that people enjoy being part of. We have zero tolerance to team members that don’t respect others.
 
-### Code of conduct
+## Code of conduct
 
 At Elementary, we’re committed to fostering a respectful and inclusive environment where everyone can thrive. To support this, we expect all team members, partners, and contractors to follow these principles:
 #### Respect and Inclusion
