--- a/docs/data-tests/dbt/dbt-package.mdx
+++ b/docs/data-tests/dbt/dbt-package.mdx
@@ -7,7 +7,7 @@ icon: "box-open"
 The Elementary dbt package serves as a collector of logs and metadata from your dbt project and offers a set of data anomaly detection and schema tests.
 To gain the most value from the dbt package, we recommend using it with the [Elementary Cloud Platform](/cloud/introduction) or with [Elementary open-source CLI tool](/oss/oss-introduction).
 
-The repository and source code of the Elementary dbt package can be [found here](https://github.com/elementary-data/dbt-data-reliability).
+Quickstart the Elementary dbt package. The repository and source code of the  can be [found here](https://github.com/elementary-data/dbt-data-reliability). 
 
 ## Package Features
 
