--- a/docs/_snippets/cloud/integrations/snowflake.mdx
+++ b/docs/_snippets/cloud/integrations/snowflake.mdx
@@ -23,7 +23,7 @@ Elementary Cloud supports the following authentication methods:
   - Password: The password you set when creating your Snowflake account.
 
 <Warning>
-  Snowflake are in the process of deprecating single-factor username & password authentication. As a result, while still supported,
+  Snowflake are in the process of deprecating single-factor username & password authentication for all human users. As a result, while still supported,
   we recommend configuring the user in advance using key-pair authentication rather than username & password, and configuring the user as TYPE=SERVICE 
   (this is automatically handled in the user creation macro above).
  
