also refer to private key in CLI docs

--- a/docs/_snippets/profiles/all-profiles.mdx
+++ b/docs/_snippets/profiles/all-profiles.mdx
@@ -11,17 +11,18 @@ elementary:
     default:
       type: snowflake
       account: [account id]
-
-      ## User/password auth ##
       user: [username]
-      password: [password]
-
       role: [user role]
+
+      ## Keypair auth (recommended) ##
+      private_key_path: [path/to/private.key]
+      # or private_key instead of private_key_path
+      private_key_passphrase: [passphrase for the private key, if key is encrypted]
+      
       database: [database name]
       warehouse: [warehouse name]
       schema: [schema name]_elementary
       threads: 4
-
 ```
 
 ```yml BigQuery
