--- a/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
+++ b/docs/cloud/features/alerts-and-incidents/alert-destinations.mdx
@@ -29,6 +29,6 @@ You’ll have full visibility into how alerts for a specific test are managed.
 ## What You Can Do
 
 - **Enable or disable alerts** for individual tests or in bulk
-- **Override alert destinations** in bulk for faster configuration updates **(Coming Soon)**
+- **Override alert destinations** in bulk for faster configuration updates. After overriding, the alert type will be changed to `CUSTOM`.
 
 This feature makes it easier to manage alert delivery and ensure alerts are routed as expected, especially across different teams or test types.
