--- a/docs/cloud/mcp/setup-guide.mdx
+++ b/docs/cloud/mcp/setup-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "MCP Setup Guide"
-sidebarTitle: "MCP Setup Guide"
+sidebarTitle: "MCP setup guide"
 ---
 
 
@@ -80,7 +80,7 @@ npx mcp-remote https://prod.api.elementary-data.com/mcp/ \
   --header "Authorization: Bearer $AUTH_TOKEN" --health
 ```
 `200 OK` confirms the endpoint and token are valid.
----
+
 ## 6 – Troubleshooting
 | Symptom | Remedy |
 |---------|--------|
@@ -91,4 +91,4 @@ npx mcp-remote https://prod.api.elementary-data.com/mcp/ \
 * Tokens confer **all** your Elementary permissions.  
 * Keep them secret and scoped; rotate when in doubt.  
 * Revoke compromised tokens immediately.
----
+
