--- a/docs/data-tests/dbt/dbt-artifacts.mdx
+++ b/docs/data-tests/dbt/dbt-artifacts.mdx
@@ -9,7 +9,7 @@ Each dbt invocation generates artifacts, with details about the project resource
 
 </Accordion>
 
-## How Elementary uploads dbt artifacts?
+## How Elementary uploads dbt artifacts
 
 The Elementary dbt package includes macros that extract specific fields from the artifacts during the execution, and insert to tables. These tables are defined as models of the package.
 
